--- a/main.html
+++ b/main.html
@@ -279,27 +279,27 @@
         /* Mobile Responsive for Popup */
         @media (max-width: 768px) {
             .popup-modal {
-                padding: 30px 20px;
-                margin: 20px;
-                max-width: 90%;
-                width: calc(100% - 40px);
+                padding: 24px 16px;
+                margin: 0 auto;
+                max-width: 95vw;
+                width: 100%;
+                box-sizing: border-box;
             }
 
             .popup-title {
-                font-size: 20px;
+                font-size: 18px;
                 margin-bottom: 12px;
             }
 
             .popup-message {
-                font-size: 16px;
+                font-size: 15px;
                 margin-bottom: 20px;
             }
 
             .popup-btn {
-                padding: 10px 25px;
-                font-size: 14px;
                 width: 100%;
                 margin-bottom: 10px;
+                font-size: 15px;
             }
         }
     </style>
@@ -343,7 +343,7 @@
     <!-- Main Content -->
     <div class="main-container">
         <div class="content-wrapper">
-            <h1 class="text-4xl md:text-5xl font-bold mb-6 twinkle text-pink-700">🌸 To My Sunshine 🌸</h1>
+            <h1 class="text-2xl md:text-5xl font-bold mb-6 twinkle text-pink-700">🌸 To My Sunshine 🌸</h1>
 
             <!-- Rainbow border around image -->
             <div class="rainbow-border mb-6 inline-block">
