--- a/main.html
+++ b/main.html
@@ -279,9 +279,9 @@
         /* Mobile Responsive for Popup */
         @media (max-width: 768px) {
             .popup-modal {
-                padding: 24px 16px;
-                margin: 0 auto;
-                max-width: 95vw;
+                padding: 24px 12px;
+                margin: 0 8px;
+                max-width: 100vw;
                 width: 100%;
                 box-sizing: border-box;
             }
